# giraffe

./: .gitignore  Cargo.toml  README.md
examples/: simple.rs
src/: capability.rs  filter_ext.rs  info_refs.rs  lib.rs  proto.rs  receive_pack.rs
