[package]
name = "giraffe"
version = "0.0.0"
authors = ["Tim <tim@glacyr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
futures = "0.3.7"
hex = "0.4.2"
serde = { version = "1.0.117", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.5"
